# clinical-kg-multi-agent

./: .gitignore  Analysis.md  KARMA_RUN.md  LICENSE  MULTI_AGENT_PIPELINE_README.md  README.md  api_keys_example.json  multi_agent_kg_extraction.py  pyproject.toml  run_pipeline.sh  test_openrouter.py
EIR_260426/: .gitignore  README_260426.md  canonicalize_to_curator_260426.py  convert_v7_to_kg_extraction_format_260425.py  curated_kb_260419.json  curated_synthetic_kb_combined_260426.json  eir_implementation_doc_260426.html  eir_implementation_log.md  inspect_extraction_260425.py  prompts_v10_260425.py  pull_aci_bench_260425.py  requirements_260426.txt  run_postchain_260426.sh  run_v10_260426.sh  smoke_test_glm47_specialized_parallel_v7_stage2_batch_260421.py  smoke_test_glm47_specialized_parallel_v8_optimized_260425.py  smoke_test_glm47_specialized_parallel_v9_optimized_260425.py  smoke_test_v10_260425.py  smoke_test_v10_aci_bench_260425.py
my_kg_multi/: RES0198_multi_agent.json  RES0199_multi_agent.json  RES0200_multi_agent.json  RES0201_multi_agent.json  RES0202_multi_agent.json
nohc_kg/: RES0198_karma_sc_nohc.json  RES0199_karma_sc_nohc.json  _stats.json
nohc_v2_kg/: RES0198_karma_sc_nohc.json  RES0199_karma_sc_nohc.json  RES0200_karma_sc_nohc.json  RES0201_karma_sc_nohc.json  RES0202_karma_sc_nohc.json  RES0203_karma_sc_nohc.json  RES0204_karma_sc_nohc.json  RES0205_karma_sc_nohc.json  RES0206_karma_sc_nohc.json  RES0207_karma_sc_nohc.json  RES0208_karma_sc_nohc.json  RES0209_karma_sc_nohc.json  RES0210_karma_sc_nohc.json  RES0211_karma_sc_nohc.json  _stats.json  (+6 more)
(+2125 files in other folders)
